# ml-peg-omol

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  coding_style.md  compose.yaml  conftest.py  contributing.md  dvc.yaml  pyproject.toml  run_analysis.sh  run_app.py  run_calcs.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_new_benchmark.yml  2_new_model.yml  3_bug_report.yml  4_feature_request.yml  5_question.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: custom.md  new_benchmark.md  new_model.md
.github/workflows/: ci.yml  docker-image.yml  docs.yml
containers/: Dockerfile  compose.yml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/apidoc/: mlip_testing.rst
docs/source/developer_guide/: add_benchmarks.rst  add_category.rst  add_models.rst  get_started.rst  index.rst  running.rst
docs/source/user_guide/: about.rst  get_started.rst  index.rst
docs/source/user_guide/benchmarks/: index.rst  nebs.rst  supramolecular.rst  surfaces.rst
ml_peg/: __init__.py
ml_peg/analysis/conformers/37conf8/: analyse_37conf8.py
ml_peg/analysis/conformers/dipconfs/: analyse_dipconfs.py
ml_peg/analysis/conformers/glucose205/: analyse_glucose205.py
ml_peg/analysis/conformers/maltose222/: analyse_maltose222.py
ml_peg/analysis/conformers/mpconf196/: analyse_mpconf196.py
ml_peg/analysis/conformers/openff-tors/: analyse_openff-tors.py
ml_peg/analysis/conformers/solv_mpconf196/: analyse_solv_mpconf196.py
ml_peg/analysis/conformers/upu46/: analyse_upu46.py
ml_peg/analysis/molecular_properties/GSCDB138/: analyse_GSCDB138.py
ml_peg/analysis/molecular_reactions/bh2o-36/: analyse_bh2o_36.py
ml_peg/analysis/molecular_reactions/bh9/: analyse_bh9.py
ml_peg/analysis/molecular_reactions/criegee22/: analyse_criegee22.py
ml_peg/analysis/molecular_reactions/cyclo70/: analyse_cyclo70.py
ml_peg/analysis/molecular_reactions/proton_transfer/: analyse_proton_transfer.py
ml_peg/analysis/molecular_reactions/rdb7/: analysis_rdb7.py
ml_peg/analysis/nebs/li_diffusion/: analyse_li_diffusion.py
ml_peg/analysis/non_covalent_interactions/QUID/: analyse_QUID.py
ml_peg/analysis/non_covalent_interactions/ionpi19/: analyse_ionpi19.py
ml_peg/analysis/non_covalent_interactions/pla15/: analyse_pla15.py
ml_peg/analysis/non_covalent_interactions/plf547/: analyse_plf547.py
ml_peg/analysis/supramolecular/L7/: analyse_L7.py
ml_peg/analysis/supramolecular/LNCI16/: analyse_LNCI16.py
ml_peg/analysis/surfaces/OC157/: analyse_OC157.py
ml_peg/analysis/surfaces/S24/: analyse_S24.py
ml_peg/analysis/surfaces/elemental_slab_oxygen_adsorption/: analyse_elemental_slab_oxygen_adsorption.py
ml_peg/analysis/tm_complexes/3dTMV/: analyse_3dTMV.py
ml_peg/analysis/tm_complexes/MME55/: analyse_MME55.py
ml_peg/analysis/tm_complexes/MOR41/: analyse_MOR41.py
ml_peg/analysis/tm_complexes/ROST61/: analyse_ROST61.py
ml_peg/analysis/tm_complexes/TMG145/: analyse_TMG145.py
ml_peg/analysis/tm_complexes/mobh35/: analyse_mobh35.py
ml_peg/analysis/tm_complexes/tmconf/: analyse_tmconf.py
ml_peg/analysis/utils/: decorators.py  utils.py
ml_peg/app/: base_app.py  build_app.py  run_app.py
ml_peg/app/data/: nav-toggle.js  styles.css  zz-mlpeg-design-system.css
ml_peg/app/molecular_properties/GSCDB138/: app_GSCDB138.py
ml_peg/app/nebs/: nebs.yml
ml_peg/app/nebs/li_diffusion/: app_li_diffusion.py
ml_peg/app/non_covalent_interactions/NCIA_D1200/: app_NCIA_D1200.py
ml_peg/app/non_covalent_interactions/NCIA_D442x10/: app_NCIA_D442x10.py
ml_peg/app/non_covalent_interactions/NCIA_HB300SPXx10/: app_NCIA_HB300SPXx10.py
ml_peg/app/non_covalent_interactions/NCIA_HB375x10/: app_NCIA_HB375x10.py
ml_peg/app/non_covalent_interactions/NCIA_IHB100x10/: app_NCIA_IHB100x10.py
ml_peg/app/non_covalent_interactions/NCIA_R739x5/: app_NCIA_R739x5.py
ml_peg/app/non_covalent_interactions/NCIA_SH250x10/: app_NCIA_SH250x10.py
ml_peg/app/non_covalent_interactions/QUID/: app_QUID.py
ml_peg/app/supramolecular/: supramolecular.yml
ml_peg/app/supramolecular/L7/: app_L7.py
ml_peg/app/supramolecular/LNCI16/: app_LNCI16.py
ml_peg/app/supramolecular/S30L/: app_S30L.py
ml_peg/app/surfaces/: surfaces.yml
ml_peg/app/surfaces/OC157/: app_OC157.py
ml_peg/app/surfaces/S24/: app_S24.py
ml_peg/app/surfaces/elemental_slab_oxygen_adsorption/: app_elemental_slab_oxygen_adsorption.py
ml_peg/app/tm_complexes/3dTMV/: app_3dTMV.py
ml_peg/app/tm_complexes/MME55/: app_MME55.py
ml_peg/app/tm_complexes/MOR41/: app_MOR41.py
ml_peg/app/tm_complexes/ROST61/: app_ROST61.py
ml_peg/app/utils/: build_callbacks.py  build_components.py  load.py  register_callbacks.py  utils.py  weas.py
ml_peg/calcs/: __init__.py
ml_peg/calcs/NCIAtlas/ncia_d1200/: calc_ncia_d1200.py
ml_peg/calcs/NCIAtlas/ncia_d442x10/: calc_ncia_d442x10.py
ml_peg/calcs/NCIAtlas/ncia_hb300spxx10/: calc_ncia_hb300spxx10.py
ml_peg/calcs/NCIAtlas/ncia_hb375x10/: calc_ncia_hb375x10.py
ml_peg/calcs/NCIAtlas/ncia_ihb100x10/: calc_ncia_ihb100x10.py
ml_peg/calcs/NCIAtlas/ncia_r739x5/: calc_ncia_r739x5.py
ml_peg/calcs/conformers/37conf8/: calc_37conf8.py
ml_peg/calcs/conformers/ACONFL/: README.md
ml_peg/calcs/conformers/dipconfs/: calc_dipconfs.py
ml_peg/calcs/conformers/glucose205/: calc_glucose205.py
ml_peg/calcs/conformers/maltose222/: calc_maltose222.py
ml_peg/calcs/conformers/mpconf196/: calc_mpconf196.py
ml_peg/calcs/conformers/openff-tors/: calc_openff-tors.py
ml_peg/calcs/conformers/solv_mpconf196/: calc_solv_mpconf196.py
ml_peg/calcs/models/: models.yaml
ml_peg/calcs/utils/: utils.py
ml_peg/cli/: cli.py
ml_peg/models/: __init__.py  get_models.py  models.py  models.yml
mlip_testing/: __init__.py
mlip_testing/analysis/: __init__.py
mlip_testing/analysis/utils/: decorators.py  utils.py
mlip_testing/app/: __init__.py  base_app.py  build_app.py  run_app.py
mlip_testing/app/utils/: build_callbacks.py  build_components.py  load.py  register_callbacks.py
mlip_testing/calcs/models/: models.py
tests/: test_mlip_testing.py
(+1603 files in other folders)
